# Forecasting

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
models/: lstm_model_state_RMSE 1.6, R2 0.12 120-70.pth
src/: functions_for_notebook.py  models.py  notebook.ipynb
src/reinforcement_learning/: data_and_plots.py  helper.py  logger.py  notebook.ipynb  notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  notebook_4.ipynb  real_data.ipynb  sxr8_de_d.csv  tempCodeRunnerFile.py  test.py  test_trading_env.py  trading_envs.py
src/supervised learning/: N52_11_Kozłowska_Ortmann.ipynb  econometrics.ipynb  functions_for_notebook.py  lstm.ipynb  recurrential_nn.ipynb  temporal_fusion.ipynb
tests/: create_benchmark_data_test.py  create_sequence_test.py  data_transformation_test.py  tempCodeRunnerFile.py
